set the dark mode to the cashier

--- a/templates/cashier/forms/customer_form.html
+++ b/templates/cashier/forms/customer_form.html
@@ -9,21 +9,21 @@
     {{ form.whatsapp }}
   </div>
   <div class="">
-    <button class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
-      focus:ring-blue-300 font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center dark:bg-blue-600
-      dark:hover:bg-blue-700 dark:focus:ring-blue-800 my-3" type="submit">
+    <button class="block text-white focus:ring-4 focus:outline-none
+       font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center bg-blue-600
+      hover:bg-blue-700 focus:ring-blue-800 my-3" type="submit">
       Save
     </button>
-    <button class="block text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
-      focus:ring-green-300 font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center dark:bg-green-600
-      dark:hover:bg-green-700 dark:focus:ring-green-800 my-3" type="button">
+    <button class="block text-white focus:ring-4 focus:outline-none
+       font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center bg-green-600
+      hover:bg-green-700 focus:ring-green-800 my-3" type="button">
       Update
     </button>
     <button
       _="on click reset() the #customer_form"
-      class="block text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none
-      focus:ring-gray-300 font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center dark:bg-gray-600
-      dark:hover:bg-gray-700 dark:focus:ring-gray-800 my-3" type="button">
+      class="block text-white focus:ring-4 focus:outline-none
+       font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center bg-gray-600
+      hover:bg-gray-700 focus:ring-gray-800 my-3" type="button">
       Clear
     </button>
   </div>
