--- a/templates/cashier/tables/order_details_table.html
+++ b/templates/cashier/tables/order_details_table.html
@@ -1,5 +1,5 @@
-<table id="products-table" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="sticky top-0 text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<table id="products-table" class="w-full text-sm text-left rtl:text-right text-gray-400">
+  <thead class="sticky top-0 text-sm uppercase bg-gray-700 text-gray-400">
     <tr>
       <th scope="col" class="px-2 py-3">name</th>
       <th scope="col" class="px-2 py-3">attributes</th>
