--- a/templates/cashier/tables/product_list.html
+++ b/templates/cashier/tables/product_list.html
@@ -1,5 +1,5 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="sticky top-10 text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<table class="w-full text-sm text-left rtl:text-right text-gray-400">
+  <thead class="sticky top-10 text-sm uppercase bg-gray-700 text-gray-400">
     <tr>
       <th scope="col" class="px-3 py-3">Product</th>
       <th scope="col" class="px-3 py-3">Price</th>
@@ -8,8 +8,8 @@
   </thead>
   <tbody>
     {% for subcategory, products in subcategory_products.items %}
-      <tr class="bg-gray-50 dark:bg-gray-700 border-b">
-        <td colspan="4" class="px-3 py-3 text-xl font-bold text-gray-800 dark:text-gray-200">
+      <tr class=" bg-gray-700 border-b">
+        <td colspan="4" class="px-3 py-3 text-xl font-bold text-gray-200">
           {{ subcategory.name }}
         </td>
       </tr>
@@ -22,8 +22,8 @@
             hx-swap="beforeend"
             hx-trigger="click delay:1s"
             _="on click wait 1.5s call calculateTotal()"
-            class="text-lg text-gray-300 odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800
-            dark:hover:bg-gray-600 cursor-pointer">
+            class="text-lg text-gray-300 odd:bg-gray-900 even:bg-gray-800
+            hover:bg-gray-600 cursor-pointer">
             <td class="px-3 py-3 ">
               <p>{{ product.name }}</p>
               <p>({{ product_line.values }})</p>
