update the form input style

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,11 @@
   </head>
   <body class="bg-gray-600 h-screen">
     
+    <style>
+    form input {
+      color: black;
+    }
+    </style>
     {% include 'includes/header.html' %}
     {% if user.is_authenticated %}
       <style>
