fix the style of the forms

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <body class="bg-gray-600 h-screen">
     
     <style>
-    form input {
+    form input,form textarea, form select{
       color: black;
     }
     </style>
