--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,24 +3,7 @@
   {% block title %} Log In {% endblock title %}
 
   {% block content %}
-  {% for message in messages %}
-  <div class="fixed top-16 right-0 w-1/4">
-    <div id="alert-2" class="flex items-center p-4 mb-4 rounded-lg rounded-t-none 
-      bg-gray-800 text-red-400 border-t-4 border-red-500" role="alert">
-      <div class="ms-3 text-sm font-medium">
-        {{ message }}
-      </div>
-      <button 
-        type="button" 
-        _="on click add .hidden to #alert-2"
-        class="ms-auto -mx-1.5 -my-1.5 rounded-lg 
-        focus:ring-2 focus:ring-red-400 p-1.5 inline-flex
-        items-center justify-center h-8 w-8 bg-gray-800 text-red-400 hover:bg-gray-700" >
-        <i class="fa-solid fa-xmark"></i>
-      </button>
-    </div>
-  </div>
-  {% endfor %}
+  {% include "includes/messages.html" %}
   <content class="h-screen flex justify-center items-center max-w-3xl mx-auto md:p-12 pt-2 text-white">
     <div class=" bg-gray-700 rounded-2xl md:drop-shadow-2xl shadow-black w-full p-8">
       <h2>Log In</h2>
