create the payment system

--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1811,6 +1811,10 @@ input:checked + .toggle-bg {
   border-top-width: 4px;
 }
 
+.border-none {
+  border-style: none;
+}
+
 .border-blue-600 {
   --tw-border-opacity: 1;
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
@@ -2000,6 +2004,11 @@ input:checked + .toggle-bg {
 
 .p-8 {
   padding: 2rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-10 {
